Update add title

--- a/input.html
+++ b/input.html
@@ -8,6 +8,7 @@
     <link type='text/css' rel='stylesheet' href='style.css'>
 </head>
 <body>
+    <p class='title'>シンプル文字数カウンター</p>
     <input type='text' name='word' id='countTarget'><span id='showField'>0</span><span>文字</span>
     <p id='resultWord'></p>
     <div id='controllers'>
